corrected z-index of modal overlay

--- a/_sass/_modal.scss
+++ b/_sass/_modal.scss
@@ -23,6 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 .modal__container {
